--- a/form/form1.html
+++ b/form/form1.html
@@ -4,14 +4,14 @@
 	<title>Form</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="form.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="form.css">
 </head>
 <body>
      <div class="container">
   <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">                        
-        <h2>Contact</h2>
+        <h2>Contactssss</h2>
       </div>
   </div>
   <div class="row">
